@@ -18,9 +18,12 @@ package org.apache.tika.parser.ocr;
 
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertTrue;
+import static org.junit.Assert.fail;
 
 import java.io.File;
 import java.io.InputStream;
+import java.util.Arrays;
+import java.util.List;
 
 import org.apache.tika.TikaTest;
 import org.junit.Test;
@@ -71,13 +74,34 @@ public class TesseractOCRConfigTest extends TikaTest {
         assertEquals("Invalid overridden timeout value", 240, config.getTimeout());
     }
 
-    @Test(expected=IllegalArgumentException.class)
-    public void testValidateLanguage() {
+    @Test
+    public void testValidateValidLanguage() {
+        List<String> validLanguages = Arrays.asList(
+                "eng", "slk_frak", "chi_tra", "eng+fra", "tgk+chi_tra+slk_frak");
+
         TesseractOCRConfig config = new TesseractOCRConfig();
-        config.setLanguage("eng");
-        config.setLanguage("eng+fra");
-        assertTrue("Couldn't set valid values", true);
-        config.setLanguage("rm -Rf *");
+
+        for (String language : validLanguages) {
+            config.setLanguage(language);
+            assertEquals("Valid language not set", language, config.getLanguage());
+        }
+    }
+
+    @Test
+    public void testValidateInvalidLanguage() {
+        List<String> invalidLanguages = Arrays.asList(
+                "", "+", "en", "en+", "eng+fra+", "rm -rf *");
+
+        TesseractOCRConfig config = new TesseractOCRConfig();
+
+        for (String language : invalidLanguages) {
+            try {
+                config.setLanguage(language);
+                fail("Invalid language set: " + language);
+            } catch (IllegalArgumentException e) {
+                // expected exception thrown
+            }
+        }
     }
 
     @Test(expected=IllegalArgumentException.class)
