@@ -17,6 +17,9 @@ Release 2.0 - ???
 
 Release 1.15 -???
 
+  * Enable handling of underscored language codes (e.g. "chi_tra")
+    in TesseractOCRParser via Graham Russell (TIKA-2231).
+
   * Improve style tags in ODT (TIKA-2242).
 
   * Add container detection for embedded MSEquation files (TIKA-2238).
